

export interface ISessionRecharge
{
    count(): number;
}
